--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     }
     h2 {
       font-family: 'Inter', Arial, sans-serif;
-      background: linear-gradient(90deg, #5600EF, #FF007A);
+      background: linear-gradient(90deg, #5600EF 0%, #5600EF 50%, #FF007A 50%, #FF007A 100%);
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
       background-clip: text;
