--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     }
     h2 {
       font-family: 'Inter', Arial, sans-serif;
-      background: linear-gradient(90deg, #5600EF 0%, #7C00F0 30%, #FF007A 70%, #FF4FA0 100%);
+      background: linear-gradient(90deg, #5600EF 0%, #FF007A 35%, #FF4FA0 100%);
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
       background-clip: text;
