--- a/index.html
+++ b/index.html
@@ -121,10 +121,14 @@
     .mcc {
       font-family: 'Inter', Arial, sans-serif;
       font-weight: bold;
-      color: #5600EF;
       font-size: 1.13em;
       margin-bottom: 6px;
       letter-spacing: 0.5px;
+      background: linear-gradient(90deg, #5600EF 0%, #FF007A 35%, #FF4FA0 100%);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      background-clip: text;
+      text-fill-color: transparent;
     }
     .desc {
       color: #222;
