--- a/index.html
+++ b/index.html
@@ -26,16 +26,43 @@
       display: block;
       max-height: 80px;
     }
-    .lang-select-top {
-      position: absolute;
-      top: 32px;
-      right: 140px; /* Ajusta según el ancho de tu logo */
-      z-index: 101;
+    h2 {
+      font-family: 'Inter', Arial, sans-serif;
+      background: linear-gradient(90deg, #5600EF 0%, #FF007A 35%, #FF4FA0 100%);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      background-clip: text;
+      text-fill-color: transparent;
+      font-weight: 800;
+      letter-spacing: 1px;
+      margin-bottom: 28px;
     }
-    .lang-select-top select {
+    .search-lang-row {
+      display: flex;
+      align-items: center;
+      gap: 16px;
+      margin-bottom: 36px;
+    }
+    .search-lang-row input {
+      font-family: 'Inter', Arial, sans-serif;
+      padding: 10px;
+      width: 280px;
+      border-radius: 6px;
+      border: 1.5px solid #5600EF;
+      font-size: 1em;
+      transition: border 0.2s, box-shadow 0.2s;
+      box-shadow: 0 1px 4px rgba(255,0,122,0.07);
+      color: #222;
+    }
+    .search-lang-row input:focus {
+      border: 2px solid #FF007A;
+      outline: none;
+      box-shadow: 0 2px 8px rgba(255,0,122,0.13);
+    }
+    .search-lang-row select {
       font-family: 'Inter', Arial, sans-serif;
       font-size: 1em;
-      padding: 6px 16px 6px 10px;
+      padding: 8px 18px 8px 12px;
       border-radius: 6px;
       border: 1.5px solid #5600EF;
       background: #fff;
@@ -46,8 +73,9 @@
       transition: border 0.2s, box-shadow 0.2s;
       cursor: pointer;
       appearance: none;
+      height: 42px;
     }
-    .lang-select-top select:focus {
+    .search-lang-row select:focus {
       border: 2px solid #FF007A;
       box-shadow: 0 2px 8px rgba(255,0,122,0.13);
     }
@@ -60,42 +88,20 @@
         height: 38px;
       }
       body { margin: 8px; }
-      .lang-select-top {
-        top: 10px;
-        right: 60px;
+      .search-lang-row {
+        flex-direction: row;
+        gap: 8px;
+        margin-bottom: 24px;
       }
-      .lang-select-top select {
+      .search-lang-row input {
+        width: 98vw;
+        max-width: 99vw;
+      }
+      .search-lang-row select {
         font-size: 0.95em;
-        padding: 4px 10px 4px 8px;
+        padding: 6px 10px 6px 8px;
+        height: 38px;
       }
-    }
-    h2 {
-      font-family: 'Inter', Arial, sans-serif;
-      background: linear-gradient(90deg, #5600EF 0%, #FF007A 35%, #FF4FA0 100%);
-      -webkit-background-clip: text;
-      -webkit-text-fill-color: transparent;
-      background-clip: text;
-      text-fill-color: transparent;
-      font-weight: 800;
-      letter-spacing: 1px;
-      margin-bottom: 28px;
-    }
-    input {
-      font-family: 'Inter', Arial, sans-serif;
-      padding: 10px;
-      width: 280px;
-      border-radius: 6px;
-      border: 1.5px solid #5600EF;
-      font-size: 1em;
-      transition: border 0.2s, box-shadow 0.2s;
-      box-shadow: 0 1px 4px rgba(255,0,122,0.07);
-      margin-bottom: 36px;
-      color: #222;
-    }
-    input:focus {
-      border: 2px solid #FF007A;
-      outline: none;
-      box-shadow: 0 2px 8px rgba(255,0,122,0.13);
     }
     .card {
       background: #fff;
@@ -294,7 +300,6 @@
       .condiciones-box { padding: 12px 8px; }
       .restric-table { min-width: 480px; font-size: 0.85em; }
       .restric-table th, .restric-table td { padding: 7px 6px; }
-      input { width: 98vw; max-width: 99vw; }
     }
   </style>
 </head>
@@ -302,14 +307,14 @@
   <div class="logo-top-right">
     <img src="PayM2.png" alt="Logo" />
   </div>
-  <div class="lang-select-top">
+  <h2 id="mainTitle">Catálogo de MCC PayU</h2>
+  <div class="search-lang-row">
+    <input type="text" id="mccInput" placeholder="Busca por MCC, actividad, descripción..." oninput="debouncedFiltrarMCC()" disabled>
     <select id="langSelect" onchange="cambiarIdioma()">
       <option value="es">ES</option>
       <option value="en">EN</option>
     </select>
   </div>
-  <h2 id="mainTitle">Catálogo de MCC PayU</h2>
-  <input type="text" id="mccInput" placeholder="Busca por MCC, actividad, descripción..." oninput="debouncedFiltrarMCC()" disabled>
   <div id="resultados" class="loading">Cargando datos...</div>
 
   <script>
