--- a/index.html
+++ b/index.html
@@ -7,24 +7,86 @@
   <!-- Google Fonts: Inter -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap" rel="stylesheet">
   <style>
+    /* 
+      LOGO Y FECHA EN ESQUINA SUPERIOR DERECHA
+      ----------------------------------------
+      El bloque .logo-block contiene el logo y la fecha de actualización.
+      Está posicionado absolutamente en la esquina superior derecha.
+      El contenido principal tiene un margen derecho extra en escritorio para evitar solapamiento.
+      En móvil, el logo y la fecha se hacen pequeños y el margen desaparece.
+    */
+    .logo-block {
+      position: absolute;
+      top: 24px;
+      right: 32px;
+      z-index: 100;
+      display: flex;
+      flex-direction: column;
+      align-items: flex-end;
+      min-width: 120px;
+      max-width: 160px;
+      pointer-events: none; /* evita clics accidentales */
+    }
+    .logo-block img {
+      max-width: 100%;
+      height: auto;
+      display: block;
+      max-height: 80px;
+    }
+    .update-info {
+      margin-top: 4px;
+      font-size: 0.93em;
+      color: #5600EF;
+      opacity: 0.65;
+      font-family: 'Inter', Arial, sans-serif;
+      letter-spacing: 0.1px;
+      text-align: right;
+      width: 100%;
+      pointer-events: none;
+      user-select: none;
+      word-break: break-word;
+    }
+    @media (max-width: 900px) {
+      .logo-block {
+        top: 10px;
+        right: 10px;
+        max-width: 90px;
+        min-width: 70px;
+      }
+      .logo-block img {
+        max-height: 38px;
+      }
+      .update-info {
+        font-size: 0.85em;
+        margin-top: 2px;
+      }
+    }
+    /* 
+      MARGEN DERECHO EN ESCRITORIO
+      ----------------------------
+      El body tiene un margen derecho extra en pantallas grandes para que el logo y la fecha nunca se sobrepongan al contenido.
+      En móvil, el margen desaparece.
+    */
+    @media (min-width: 701px) {
+      body {
+        margin-right: 200px;
+      }
+    }
+    @media (max-width: 700px) {
+      body {
+        margin-right: 0;
+      }
+    }
+
+    /* 
+      RESTO DEL ESTILO (no cambia respecto a versiones anteriores)
+    */
     body {
       font-family: 'Inter', Arial, sans-serif;
       margin: 40px;
       background: linear-gradient(120deg, #fff 0%, #fff0fa 100%);
       color: #222;
       position: relative;
-    }
-    .logo-top-right {
-      position: absolute;
-      top: 24px;
-      right: 32px;
-      z-index: 100;
-    }
-    .logo-top-right img {
-      max-width: 100%;
-      height: auto;
-      display: block;
-      max-height: 80px;
     }
     h2 {
       font-family: 'Inter', Arial, sans-serif;
@@ -80,14 +142,9 @@
       box-shadow: 0 2px 8px rgba(255,0,122,0.13);
     }
     @media (max-width: 700px) {
-      .logo-top-right {
-        top: 10px;
-        right: 10px;
+      h2 {
+        font-size: 1.3em;
       }
-      .logo-top-right img {
-        height: 38px;
-      }
-      body { margin: 8px; }
       .search-lang-row {
         flex-direction: row;
         gap: 8px;
@@ -304,8 +361,15 @@
   </style>
 </head>
 <body>
-  <div class="logo-top-right">
+  <!-- 
+    LOGO Y FECHA DE ACTUALIZACIÓN
+    -----------------------------
+    Si quieres cambiar el logo, reemplaza el src de la imagen.
+    Si quieres cambiar la fecha o el responsable, edita el objeto updateTexts en el JS.
+  -->
+  <div class="logo-block">
     <img src="PayM2.png" alt="Logo" />
+    <div class="update-info" id="updateInfo"></div>
   </div>
   <h2 id="mainTitle">Catálogo de MCC PayU</h2>
   <div class="search-lang-row">
@@ -359,6 +423,23 @@
         prohibido: "Prohibited"
       }
     };
+
+    /*
+      FECHA Y RESPONSABLE DE ACTUALIZACIÓN
+      ------------------------------------
+      Si quieres cambiar la fecha o el responsable, edita aquí:
+      - updateTexts.es: para español
+      - updateTexts.en: para inglés
+      Puedes poner solo la fecha, o agregar "by" o "·" según el idioma.
+    */
+    const updateTexts = {
+      es: "Actualizado: 22-07-2025 · Merchant Risk",
+      en: "Updated: 07-22-2025 by Merchant Risk"
+    };
+
+    function setUpdateInfo() {
+      document.getElementById('updateInfo').textContent = updateTexts[idioma] || updateTexts['es'];
+    }
 
     // Busca el valor de la columna, probando varios nombres posibles
     function getCol(row, ...names) {
@@ -439,6 +520,7 @@
     document.addEventListener("DOMContentLoaded", function() {
       document.getElementById('langSelect').value = idioma;
       cambiarIdioma(false);
+      setUpdateInfo();
     });
 
     let debounceTimer;
@@ -513,6 +595,7 @@
       localStorage.setItem('idiomaMCC', idioma);
       document.getElementById('mainTitle').textContent = t('titulo');
       document.getElementById('mccInput').placeholder = t('placeholder');
+      setUpdateInfo();
       cargarDatos(triggerFiltrar);
     }
 
