--- a/index.html
+++ b/index.html
@@ -7,25 +7,56 @@
   <!-- Google Fonts: Inter -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap" rel="stylesheet">
   <style>
-    /* 
-      LOGO Y FECHA EN ESQUINA SUPERIOR DERECHA
-      ----------------------------------------
-      El bloque .logo-block contiene el logo y la fecha de actualización.
-      Está posicionado absolutamente en la esquina superior derecha.
-      El contenido principal tiene un margen derecho extra en escritorio para evitar solapamiento.
-      En móvil, el logo y la fecha se hacen pequeños y el margen desaparece.
-    */
-    .logo-block {
+    /* LOGO Y FECHA EN ESQUINA SUPERIOR DERECHA */
+    .logo-top-right {
       position: absolute;
       top: 24px;
       right: 32px;
       z-index: 100;
+      display: flex;
+      flex-direction: column;
+      align-items: flex-end;
     }
-    .logo-block img {
+    .logo-top-right img {
       max-width: 100%;
       height: auto;
       display: block;
       max-height: 80px;
+    }
+    .update-info {
+      margin-top: 4px;
+      font-size: 0.93em;
+      color: #5600EF;
+      opacity: 0.65;
+      font-family: 'Inter', Arial, sans-serif;
+      letter-spacing: 0.1px;
+      z-index: 101;
+      pointer-events: none;
+      user-select: none;
+      text-align: right;
+      width: 100%;
+    }
+    @media (max-width: 700px) {
+      .logo-top-right {
+        top: 10px;
+        right: 10px;
+      }
+      .logo-top-right img {
+        height: 38px;
+      }
+      .update-info {
+        font-size: 0.85em;
+        margin-top: 2px;
+      }
+    }
+
+    /* RESTO DEL ESTILO */
+    body {
+      font-family: 'Inter', Arial, sans-serif;
+      margin: 40px;
+      background: linear-gradient(120deg, #fff 0%, #fff0fa 100%);
+      color: #222;
+      position: relative;
     }
     h2 {
       font-family: 'Inter', Arial, sans-serif;
@@ -84,7 +115,6 @@
       h2 {
         font-size: 1.3em;
       }
-      body { margin: 8px; }
       .search-lang-row {
         flex-direction: row;
         gap: 8px;
@@ -301,13 +331,8 @@
   </style>
 </head>
 <body>
-  <!-- 
-    LOGO Y FECHA DE ACTUALIZACIÓN
-    -----------------------------
-    Si quieres cambiar el logo, reemplaza el src de la imagen.
-    Si quieres cambiar la fecha o el responsable, edita el objeto updateTexts en el JS.
-  -->
-  <div class="logo-block">
+  <!-- LOGO Y FECHA DE ACTUALIZACIÓN -->
+  <div class="logo-top-right">
     <img src="PayM2.png" alt="Logo" />
     <div class="update-info" id="updateInfo"></div>
   </div>
@@ -363,6 +388,16 @@
         prohibido: "Prohibited"
       }
     };
+
+    // FECHA Y RESPONSABLE DE ACTUALIZACIÓN
+    const updateTexts = {
+      es: "Actualizado: 22-07-2025 · Merchant Risk",
+      en: "Updated: 07-22-2025 by Merchant Risk"
+    };
+
+    function setUpdateInfo() {
+      document.getElementById('updateInfo').textContent = updateTexts[idioma] || updateTexts['es'];
+    }
 
     // Busca el valor de la columna, probando varios nombres posibles
     function getCol(row, ...names) {
