--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
   <!-- Google Fonts: Inter -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap" rel="stylesheet">
   <style>
-    /* LOGO Y FECHA EN ESQUINA SUPERIOR DERECHA */
     .logo-top-right {
       position: absolute;
       top: 24px;
@@ -50,7 +49,6 @@
       }
     }
 
-    /* RESTO DEL ESTILO */
     body {
       font-family: 'Inter', Arial, sans-serif;
       margin: 40px;
@@ -328,6 +326,25 @@
       .restric-table { min-width: 480px; font-size: 0.85em; }
       .restric-table th, .restric-table td { padding: 7px 6px; }
     }
+
+    /* Leyenda de condiciones debajo de onboarding */
+    .leyenda-condiciones {
+      margin-top: 10px;
+      font-size: 0.93em;
+      font-family: 'Inter', Arial, sans-serif;
+      opacity: 0.92;
+      display: flex;
+      gap: 10px;
+      flex-wrap: wrap;
+    }
+    .leyenda-condiciones .badge {
+      font-size: 0.93em;
+      padding: 2px 12px 2px 6px;
+      min-width: 0;
+      font-weight: 500;
+      box-shadow: none;
+      margin: 0;
+    }
   </style>
 </head>
 <body>
@@ -397,6 +414,40 @@
 
     function setUpdateInfo() {
       document.getElementById('updateInfo').textContent = updateTexts[idioma] || updateTexts['es'];
+    }
+
+    // Leyendas para condiciones (con look and feel de badges)
+    const leyendasCondiciones = {
+      es: [
+        { tipo: "restric", texto: "Restringido: Sujeto a condiciones específicas." },
+        { tipo: "prohib", texto: "Prohibido: No elegible para aprobación." }
+      ],
+      en: [
+        { tipo: "restric", texto: "Restricted: Subject to specific conditions." },
+        { tipo: "prohib", texto: "Prohibited: Not eligible for approval." }
+      ]
+    };
+
+    function renderLeyendaBadge(tipo, texto) {
+      if (tipo === "restric") {
+        return `<span class="badge badge-restringido">
+          <svg viewBox="0 0 20 20" fill="currentColor" style="vertical-align:middle;width:1.1em;height:1.1em;">
+            <circle cx="10" cy="10" r="10" fill="#b59a00"/>
+            <rect x="5" y="9" width="10" height="2" rx="1" fill="#fff"/>
+          </svg>
+          ${texto}
+        </span>`;
+      }
+      if (tipo === "prohib") {
+        return `<span class="badge badge-prohibido">
+          <svg viewBox="0 0 20 20" fill="currentColor" style="vertical-align:middle;width:1.1em;height:1.1em;">
+            <circle cx="10" cy="10" r="10" fill="#d6003a"/>
+            <path d="M7 7l6 6M13 7l-6 6" stroke="#fff" stroke-width="2" stroke-linecap="round"/>
+          </svg>
+          ${texto}
+        </span>`;
+      }
+      return "";
     }
 
     // Busca el valor de la columna, probando varios nombres posibles
@@ -518,129 +569,3 @@
         ${t('permitido')}
       </span>`;
       if (v.includes('restringido') || v.includes('restricted')) return `<span class="badge badge-restringido">
-        <svg viewBox="0 0 20 20" fill="currentColor"><circle cx="10" cy="10" r="10" fill="#b59a00"/><rect x="5" y="9" width="10" height="2" rx="1" fill="#fff"/></svg>
-        ${t('restringido')}
-      </span>`;
-      if (v.includes('prohibido') || v.includes('prohibited')) return `<span class="badge badge-prohibido">
-        <svg viewBox="0 0 20 20" fill="currentColor"><circle cx="10" cy="10" r="10" fill="#d6003a"/><path d="M7 7l6 6M13 7l-6 6" stroke="#fff" stroke-width="2" stroke-linecap="round"/></svg>
-        ${t('prohibido')}
-      </span>`;
-      return '';
-    }
-
-    function generarTablaMediosPorPais(row) {
-      let html = `<table class="restric-table"><tr>`;
-      paises.forEach(pais => {
-        html += `<th>${pais}</th>`;
-      });
-      html += `</tr><tr>`;
-      paises.forEach(pais => {
-        html += `<td>`;
-        (mediosPorPais[pais]||[]).forEach(medio => {
-          const val = row[medio.columna];
-          if (val && typeof val === "string" && val.trim() !== "") {
-            html += getBadge(val, medio.label) + "<br>";
-          }
-        });
-        html += `</td>`;
-      });
-      html += `</tr></table>`;
-      return html;
-    }
-
-    function cambiarIdioma(triggerFiltrar = true) {
-      idioma = document.getElementById('langSelect').value;
-      localStorage.setItem('idiomaMCC', idioma);
-      document.getElementById('mainTitle').textContent = t('titulo');
-      document.getElementById('mccInput').placeholder = t('placeholder');
-      setUpdateInfo();
-      cargarDatos(triggerFiltrar);
-    }
-
-    function cargarDatos(triggerFiltrar = true) {
-      datosCargados = false;
-      document.getElementById('mccInput').disabled = true;
-      document.getElementById('resultados').innerHTML = `<div class="loading">${t('cargando')}</div>`;
-      fetch(idioma === "es" ? "csvjson.json" : "Engcsvjson.json")
-        .then(res => {
-          if (!res.ok) throw new Error(t('error') + res.statusText);
-          return res.json();
-        })
-        .then(json => {
-          datos = json;
-          datosCargados = true;
-          document.getElementById('mccInput').disabled = false;
-          document.getElementById('resultados').innerHTML = `<div class="loading">${t('escribe')}</div>`;
-          if (triggerFiltrar && document.getElementById('mccInput').value.length > 1) filtrarMCC();
-        })
-        .catch(err => {
-          document.getElementById('resultados').innerHTML = `<div class="noresult">${t('error') + err.message}</div>`;
-        });
-    }
-
-    function filtrarMCC() {
-      if (!datosCargados) return;
-      const texto = document.getElementById('mccInput').value.trim().toLowerCase();
-      const resultados = document.getElementById('resultados');
-      resultados.innerHTML = '';
-
-      if (texto.length < 2) {
-        resultados.innerHTML = `<div class="loading">${t('escribe')}</div>`;
-        return;
-      }
-
-      // Busca en ambos idiomas para cada campo
-      const coincidencias = datos.filter(row =>
-        (getCol(row, "MCC") && getCol(row, "MCC").toString().toLowerCase().includes(texto)) ||
-        (getCol(row, "Actividad", "Activity") && getCol(row, "Actividad", "Activity").toLowerCase().includes(texto)) ||
-        (getCol(row, "MCC CODE DESCRIPTION ES", "MCC CODE DESCRIPTION EN") && getCol(row, "MCC CODE DESCRIPTION ES", "MCC CODE DESCRIPTION EN").toLowerCase().includes(texto)) ||
-        (getCol(row, "Categroria / Subcategoria", "Category / Subcategory") && getCol(row, "Categroria / Subcategoria", "Category / Subcategory").toLowerCase().includes(texto))
-      );
-
-      if (coincidencias.length === 0) {
-        resultados.innerHTML = `<div class="noresult">${t('noresult')}</div>`;
-        return;
-      }
-
-      coincidencias.forEach((row, idx) => {
-        let html = `<div class="card">
-          <div class="card-content">
-            <div class="mcc">MCC: ${getCol(row, "MCC")} &mdash; ${getCol(row, "Categroria / Subcategoria", "Category / Subcategory") || ""}</div>
-            <div class="desc">${getCol(row, "MCC CODE DESCRIPTION ES", "MCC CODE DESCRIPTION EN") || ""}</div>
-            <div><span class="label">${t('actividad')}:</span> ${getCol(row, "Actividad", "Activity") || ""}</div>
-            <div><span class="label">${t('riesgo')}:</span> ${getCol(row, "Riesgo LAyFT", "AML Risk") || ""}</div>
-            <div><span class="label">${t('nivel')}:</span> ${getCol(row, "Nivel de Aprobación", "Approval Level") || ""}</div>
-            <div><span class="label">${t('add')}:</span> ${getCol(row, "ADD") || ""}</div>
-            <div><span class="label">${t('tpv')}:</span> ${getCol(row, "TPV USD$ (CELxDefault)") || ""}</div>
-            <div class="section-space"></div>
-            <div class="table-responsive">
-              <span class="label">${t('restric')}</span>
-              <table class="restric-table">
-                <tr>
-                  ${paises.map(p=>`<th>${p}</th>`).join('')}
-                </tr>
-                <tr>
-                  ${paises.map(p=>{
-                    const val = row[p]||"";
-                    return `<td>${getBadgeRestric(val)}</td>`;
-                  }).join('')}
-                </tr>
-              </table>
-            </div>
-            <div class="section-space"></div>
-            <div class="table-responsive">
-              <span class="label">${t('medios')}</span>
-              ${generarTablaMediosPorPais(row)}
-            </div>
-          </div>
-          <div class="condiciones-box">
-            <span class="label">${t('condiciones')}</span>
-            <pre>${getCol(row, "Condiciones para vinculación", "Onboarding conditions") || "N/A"}</pre>
-          </div>
-        </div>`;
-        resultados.innerHTML += html;
-      });
-    }
-  </script>
-</body>
-</html>
